# hackathon

./: README.md  benchmark.txt
jwt-zk-proving-server/: Cargo.toml
jwt-zk-proving-server/program/: Cargo.toml
jwt-zk-proving-server/program/src/: main.rs
jwt-zk-proving-server/server/src/: main.rs
sp1-proving-server/: Cargo.toml
sp1-proving-server/src/: main.rs
zk-solana-aa/: Anchor.toml  package.json
zk-solana-aa-client/: eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
zk-solana-aa-client/app/: layout.tsx  page.tsx
zk-solana-aa-client/components/: GoogleButton.tsx  TransferForm.tsx
zk-solana-aa-client/hooks/: useEnv.ts  useSolanaProgram.ts
zk-solana-aa-client/lib/: utils.ts  zk_solana_aa.json
zk-solana-aa-client/providers/: GoogleProvider.tsx  WalletProvider.tsx
zk-solana-aa/programs/zk-solana-aa/: Cargo.toml
zk-solana-aa/programs/zk-solana-aa/src/: lib.rs
zk-solana-aa/programs/zk-solana-aa/src/constants/: mod.rs
zk-solana-aa/programs/zk-solana-aa/src/contract/: accounts.rs  auth.rs  mod.rs
zk-solana-aa/tests/: account-methods.ts  zk-solana-aa.ts
