[package]
name = "zk-solana-aa"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_solana_aa"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
# sp1-solana requires anchor-lang 0.30.1
anchor-lang = "0.31.0"
borsh = "1.5.1"
sp1-solana = { git = "https://github.com/succinctlabs/sp1-solana" }
sp1-primitives = "5.0.0"
anchor-spl = "0.31.0"
p3-baby-bear = "0.2.3-succinct"
serde = { version = "1.0.219", features = ["derive"] }

